[package]
name = "rusty-forest"
version = "0.1.2"
authors = ["TincaMatei <tinca.matei02@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A small terminal application based on the Forest app for mobile."
homepage = "https://github.com/tincaMatei/rusty-forest"
readme = "README.md"
documentation = "https://github.com/tincaMatei/rusty-forest/blob/main/DOCS.md"
repository = "https://github.com/tincaMatei/rusty-forest"
categories = ["command-line-utilities"]
keywords = ["cli", "productivity", "forest"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion="1.0.0"
hex="0.4.3"
getopts="0.2"
regex="1.5.4"
rand="0.8.4"
chrono="0.4"
itertools="0.10"
